--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # .env 파일에 환경 변수 이름과 키를 저장합니다.
 OPENAI_API_KEY=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
-WEAVIATE_URL=http://localhost:8501
+WEAVIATE_URL=https://qdctu8artzisv6g94ewjg.c0.asia-southeast1.gcp.weaviate.cloud
 WEAVIATE_API_KEY=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
 ADMIN_PASSWORD=12345
